--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
       ports:
         - 8080:8080
       volumes:
-        - ~/jenkins:/var/jenkins_home
+        - /var/docker/jenkins:/var/jenkins_home
         - /var/run/docker.sock:/var/run/docker.sock
         - /usr/local/bin/docker:/usr/local/bin/docker
